--- a/foodApp/index.html
+++ b/foodApp/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -21,8 +22,8 @@
         <banner>
             <!-- background-img to be set via css -->
             <h1>Meal Plans For Everyone</h1>
-            <a href="#">Book Now</a>
-            <a href="#">Show me more</a>
+            <a href="#" class="btn">Book Now</a>
+            <a href="#" class="btn btn-empty">Show me more</a>
         </banner>
     </header>
     <section class="features"></section>
