--- a/css_properties/inheritance.html
+++ b/css_properties/inheritance.html
@@ -8,18 +8,18 @@
         .parent{
             color: rgb(219, 13, 13);
             width: 100px;
-            border: 5px solid blue;
+            height: 200px;
+            
         }
         .child,.no-parent{
-            height: 200px;
-            width: 50%;
             color: lightpink;
+            border: 5px solid blue;
         }
     </style>
 </head>
 <body>
     <div class="parent">
-        <div class="child">I get my color as inheritance. I also got my container width from my parent</div>
+        <div class="child">I get my color</div>
     </div>
     <div class="no-parent">I did not get my color as inheritance. I also got my container width on my own</div>
 </body>
